welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.SlugTracking'
override def run(){
             ^